--- a/app/views/layouts/_header_national.html
+++ b/app/views/layouts/_header_national.html
@@ -63,9 +63,9 @@
       	<%# //Tab nav %>
 
       	<%# Tab panels %>
-      	<% %w(NSW ACT QLD VIC SA WA).each do |state| %>
+        <% states.each do |state| %>
 		      <ul id="tab-<%= state.downcase %>" class="tab__content<%= ' is-active' if state == 'NSW' %>">
-		        <% @centres[state].each do |centre| %>
+            <% @centres_by_state[state].each do |centre| %>
 		          <li>
                 <%= link_to context_aware_link(centre), class: 'container h1', target: '_self' do %>
                   <%= centre.short_name %>
@@ -93,9 +93,9 @@
 
           <div class="drop-down-menu__target drop-down pointer-up box box--drop-down" id="header-menu-toggle-non-palm">
           	<dl class="drop-down-menu__list">
-      				<% %w(NSW ACT QLD VIC SA WA).each do |state| %>
+      				<% states.each do |state| %>
 	          		<dt class="drop-down-menu__hdr-sub drop-down-menu__divider"><%= state %></dt>
-		        		<% @centres[state].each do |centre| %>
+		        		<% @centres_by_state[state].each do |centre| %>
 	          			<dd class="drop-down-menu__divider">
                     <%= link_to centre.short_name, context_aware_link(centre), class: 'btn btn--full btn--full-left', target: '_self' %>
                   </dd>
