--- a/app/views/products/_national_view_dialog.html.erb
+++ b/app/views/products/_national_view_dialog.html.erb
@@ -21,9 +21,9 @@
     <%# Centre selector target %>
     <div class="drop-down-menu__target drop-down pointer-up box box--drop-down" id="national-dialog-centre-selector">
       <dl class="drop-down-menu__list">
-      	<% %w(NSW ACT QLD VIC SA WA).each do |state| %>
+        <% states.each do |state| %>
       	  <dt class="drop-down-menu__hdr-sub drop-down-menu__divider"><%= state %></dt>
-      	  <% @centres[state].each do |centre| %>
+            <% @centres_by_state[state].each do |centre| %>
       	    <dd class="drop-down-menu__divider">
       	      <%= link_to centre.short_name, centre_products_path(centre_id: centre), class: 'btn btn--full btn--full-left', target: '_self' %>
       	    </dd>
