--- a/app/views/layouts/_section_nav.html.erb
+++ b/app/views/layouts/_section_nav.html.erb
@@ -35,7 +35,7 @@
             <label for="show-products-deals-events">Show <%= params[:controller] %> at</label>
           </div>
           <div class="flag__body">
-            <select class="one-whole" ng-controller="CentreSelectorController" ng-model="selectedCentre" ng-change="selectCentre()" ng-init="selectedCentre='<%= @centre.code %>'" id="show-products-deals-events">
+            <select class="one-whole" ng-controller="CentreSelectorController" ng-model="selectedCentre" ng-change="selectCentre()" ng-init="selectedCentre='<%= @centre.code %>';currentCentre='<%= @centre.code %>'" id="show-products-deals-events">
               <option value="<%= @centre.code %>"><%= @centre.short_name %></option>
               <option value="<%= ([@centre] + @nearby_centres).map{|c| c.code}.join(',') %>"><%= @centre.short_name %> &amp; nearby centres</option>
               <option value="all">All Centres</option>
