Setting up new curation page and first round of markup

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -139,6 +139,7 @@
 @import "partials/modules/promo-tile";
 @import "partials/modules/no-content-fallback-msg";
 @import "partials/modules/img-rotate";
+@import "partials/modules/product-curation";
 //@import "partials/modules/sprite";
 
   /* Modules -> Widgets */
