--- a/app/views/centres/show.html.erb
+++ b/app/views/centres/show.html.erb
@@ -1,3 +1,4 @@
+<% content_for :class_for_main, "container--spacing-top-main-content" %>
 <% content_for :custom_styles, render('/shared/centre_hero_custom_styles', centre_id: @centre.code, target: '.header__hero') %>
 
 <%# Pin board %>
