--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,3 +1,5 @@
+<% content_for :class_for_main, "container--spacing-top-main-content" %>
+
 <h1 class="hide-visually">Events</h1>
 
 <% if @events.blank? %>
