--- a/app/views/deals/index.html.erb
+++ b/app/views/deals/index.html.erb
@@ -1,3 +1,5 @@
+<% content_for :class_for_main, "container--spacing-top-main-content" %>
+
 <% content_for :section_nav do %>
   <%= render layout: '/layouts/section_nav' do %>
     <li><%= link_to 'All Deals', centre_deals_path(@centre), 'ng-class' => "{'is-active': (activeNavigationItem == '')}", class: active_link?( params[ :campaign_code ], nil ) -%></li><%-
