--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -52,7 +52,7 @@
                   <p>Choose a centre to see availability</p>
                 <% end %>
 
-                <div class="drop-down-container drop-down-menu drop-down-menu--fixed-width">
+                <div class="drop-down-menu drop-down-menu--target-width-center-align drop-down-container">
 
                   <button type="button" class="drop-down-menu__trigger btn btn--full btn--full-left btn--main btn--main-dark btn--pointer btn--pointer-padding-med" toggle-visibility="product-details-centre-selection-menu">
                     Select Centre
