--- a/app/views/products/_products.html.erb
+++ b/app/views/products/_products.html.erb
@@ -10,7 +10,7 @@
       </em>
       <span>See nearby centres</span>
     </p>
-    <div class="drop-down-container drop-down-menu drop-down-menu--fixed-width">
+    <div class="drop-down-menu drop-down-menu--target-width-center-align drop-down-container">
 
       <%# Centre selector trigger %>
       <button type="button" class="drop-down-menu__trigger btn btn--full btn--full-left btn--main btn--main-dark btn--pointer" toggle-visibility="no-products-nearby-centre">
@@ -25,7 +25,7 @@
           <dl class="drop-down-menu__list">
             <% %w(NSW ACT QLD VIC SA WA).each do |state| %>
               <dt class="drop-down-menu__hdr-sub drop-down-menu__divider"><%= state %></dt>
-              <% @centres[state].each do |centre| %>
+              <% @centres_by_state[state].each do |centre| %>
                 <dd class="drop-down-menu__divider">
                   <%= link_to centre.short_name, centre_products_path(centre_id: centre.code), class: 'btn btn--full btn--full-left js-no-angular-link' %>
                 </dd>
