update styleguide with more appropriate markup

--- a/app/assets/stylesheets/partials/modules/_drop-down-menu.scss
+++ b/app/assets/stylesheets/partials/modules/_drop-down-menu.scss
@@ -5,7 +5,7 @@
 /*
   Common styles for a drop down menu.
 
-  .drop-down-menu--fixed-width   - max width on dropdown and margin on top
+  .drop-down-menu--target-width-center-align    - Max width equalling width of drop down target, center align and add some top spacing
 
   Styleguide Drop Down Menu
 */
