--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -214,13 +214,15 @@
         </dl>
 
         <%# No stores matching keyword filter message %>
-        <div class="no-content-fallback-msg no-content-fallback-msg--flush island-top hide-fully js-stores-keyword-filter-no-results">
-          <p>
-            <span class="no-content-fallback-msg__icon icon icon--store icon--flush-top" aria-hidden="true"></span>
-            <em class="h1">No Stores matching
-              <span class="js-stores-keyword-filter-value"></span>
-            </em>
-          </p>
+        <div class="island">
+          <div class="no-content-fallback-msg no-content-fallback-msg--flush hide-fully js-stores-keyword-filter-no-results">
+            <p>
+              <span class="no-content-fallback-msg__icon icon icon--store icon--flush-top" aria-hidden="true"></span>
+              <em class="h1">No Stores matching
+                <span class="js-stores-keyword-filter-value"></span>
+              </em>
+            </p>
+          </div>
         </div>
         <%# //No stores matching keyword filter message %>
 
