Defining the master grid dimensions and start of pinboard fixed height styling

--- a/app/assets/stylesheets/partials/layout/grid/_widths.scss
+++ b/app/assets/stylesheets/partials/layout/grid/_widths.scss
@@ -118,6 +118,6 @@
 }*/
 
 /* Desk large */
-/*@include respond-min($desk-lrg) {
+@include respond-min($desk-lrg) {
   @include width-classes("desk-lrg-");
-}*/
+}
