--- a/app/views/curations/_tile_hero.html.erb
+++ b/app/views/curations/_tile_hero.html.erb
@@ -2,7 +2,12 @@
 <article class="tile tile--products box" role="article">
   <a href="#" target="_self">
     <div class="tile__image">
-      <img alt="" src="<%= tile_hero[:image_url] %>">
+      <div class="vert-align">
+        <div class="vert-align__inner">
+          <!-- <img alt="" src="<%= tile_hero[:image_url] %>"> -->
+          <img alt="" src="http://res.cloudinary.com/wlabs/image/fetch/c_pad,f_auto,w_825/http://res.cloudinary.com/wlabs/image/upload/v1381336879/l8itsnowlxzljr7vsd6d.jpg">
+        </div>
+      </div>
     </div>
     <div class="tile__meta">
       <span class="tile__meta__icon">
