--- a/app/views/curations/_tile_sidekick.html.erb
+++ b/app/views/curations/_tile_sidekick.html.erb
@@ -2,7 +2,11 @@
 <article class="tile tile--products box" role="article">
   <a href="#" target="_self">
     <div class="tile__image">
-      <img alt="" src="<%= tile_sidekick[:image_url] %>">
+      <div class="vert-align">
+        <div class="vert-align__inner">
+          <img alt="" src="<%= tile_sidekick[:image_url] %>">
+        </div>
+      </div>
     </div>
     <div class="tile__meta">
       <span class="tile__meta__icon">
