--- a/app/assets/stylesheets/partials/modules/_stores-maps.scss
+++ b/app/assets/stylesheets/partials/modules/_stores-maps.scss
@@ -324,13 +324,12 @@
         }
 
         /* Keyword filter textbox - need to increase specificity to override the dynamic `is-active` class that gets appended for toggle visibility Angular directive */
-        .stores-maps .stores-maps__filters .stores-maps__keyword-filter-input {
+        .stores-maps__filters .stores-maps__keyword-filter-input {
 
           /* Display all filters on one line */
           @include respond-min($iphone-landscape) {
             display: inline-block;
             width: 34%;
-
           }
 
           /* Reduce width to handle bigger map toggle button */
