Final updates to Privacy Policy

--- a/app/views/pages/privacy_policy.html.erb
+++ b/app/views/pages/privacy_policy.html.erb
@@ -140,7 +140,7 @@
 
     <h3>What information we collect and why</h3>
 
-    <p>When you become a registered user of Westfield Online (Site), including when you use services offered by the Site, subscribe to Westfield's Email Newsletters service or shop with Participating Retailers, we ask for:</p>
+    <p>When you become a registered user of westfield.com.au, or an associated site (<strong>Site</strong>), including when you use services offered by the Site, subscribe to Westfield's Email Newsletters service or shop with Participating Retailers, we may ask for:</p>
 
     <ul>
       <li>your name;</li>
@@ -222,10 +222,10 @@
     <p>You will only receive emails from Westfield if:</p>
 
     <ul>
-      <li><strong>You subscribe to our Email Newsletters service.</strong> Our Email Newsletters will keep you informed of the latest offers, current promotions and specials at the centre(s) of your choice and also Media Releases, Annual Reports and Financial Reports from the Westfield Corporate site. If you no longer wish to receive Email Newsletters, you may unsubscribe by logging into the Site and deselecting your choices from Email Newsletters.</li>
-      <li><strong>A friend nominates you to receive a page from the Westfield Site.</strong> The email will be sent to you on behalf of your friend. You will not receive subsequent e-mails from us, because Westfield will not record your e-mail address.</li>
-      <li><strong>You request information about our services when you choose to contact us.</strong> You will not be added to a mailing list of any kind and will only receive e-mail in the matter that you have contacted us about.</li>
-      <li><strong>You provide your details and request that we contact you</strong> when you send us your Resume or when you complete our Customer Service Survey.</li>
+      <li><strong>You subscribe to our Email Newsletters service.</strong> Our Email Newsletters will keep you informed of the latest offers, current promotions and specials at the centre(s) of your choice and also Media Releases, Annual Reports and Financial Reports from the Westfield Corporate site. If you no longer wish to receive Email Newsletters, you may unsubscribe by logging into the Site and deselecting your choices from Email Newsletters;</li>
+      <li><strong>A friend nominates you to receive a page from the Westfield Site.</strong> The email will be sent to you on behalf of your friend. You will not receive subsequent e-mails from us, because Westfield will not record your e-mail address;</li>
+      <li><strong>You request information about our services when you choose to contact us.</strong> You will not be added to a mailing list of any kind and will only receive e-mail in the matter that you have contacted us about;</li>
+      <li><strong>You provide your details and request that we contact you</strong> when you send us your Resume or when you complete our Customer Service Survey or</li>
       <li>They are otherwise relevant to the reasons for which we hold your email address, where we are permitted to do so by law.</li>
     </ul>
 
@@ -262,7 +262,7 @@
 
     <p>We will try to satisfy any privacy questions that you have and correct any errors on our part. If you still have concerns please contact our Privacy Officer by email on <%= mail_to 'privacy@au.westfield.com' %>, or phoning <a href="tel:(+612)93587000">(+61 2) 9358 7000</a>.</p>
 
-    <h3>Changes to our Privacy Statement</h3>
+    <h3>Changes to our privacy policy</h3>
 
     <p>This privacy policy relates to our current privacy standards. We may vary our privacy policy from time to time. We will notify you of any changes by publishing the latest policy from time to time at <%= link_to 'www.westfield.com.au/privacy-policy', 'http://westfield.com.au/privacy-policy' %>.</p>
 
